@@ -303,7 +303,7 @@ static void _set_active_combo_part(GtkComboBox *combo,
 {
 	char *temp_char = NULL;
 	int action = 0;
-	int i = 0;
+	int i = 0, unknown_found = 0;
 	char *upper = NULL;
 
 	gtk_tree_model_get(model, iter, type, &temp_char, -1);
@@ -346,10 +346,13 @@ static void _set_active_combo_part(GtkComboBox *combo,
 		else
 			for(i = 0; i < NODE_STATE_END; i++) {
 				upper = node_state_string(i);
-				if(!strcmp(upper, "UNKNOWN"))
+				if(!strcmp(upper, "UNKNOWN")) {
+					unknown_found++;
 					continue;
+				}
+				
 				if(!strcasecmp(temp_char, upper)) {
-					action = i + 2;
+					action = i + 2 - unknown_found;
 					break;
 				}
 			}
@@ -490,7 +493,7 @@ static void _admin_edit_combo_box_part(GtkComboBox *combo,
 		g_print("nothing selected\n");
 		return;
 	}
-	
+
 	gtk_tree_model_get(model, &iter, 0, &name, -1);
 	gtk_tree_model_get(model, &iter, 1, &column, -1);
 
@@ -1032,6 +1035,7 @@ static void _update_part_sub_record(sview_part_sub_t *sview_part_sub,
 	gtk_tree_store_set(treestore, iter, SORTID_STATE, 
 			   lower, -1);
 	xfree(lower);
+	
 	gtk_tree_store_set(treestore, iter, SORTID_STATE_NUM,
 			   sview_part_sub->node_state, -1);
 	
@@ -1235,7 +1239,6 @@ static void _update_sview_part_sub(sview_part_sub_t *sview_part_sub,
 	if(!node_scaling)
 		node_scaling = 1;
 #endif	
-	
 	if (sview_part_sub->node_cnt == 0) {	/* first node added */
 		sview_part_sub->node_state = node_ptr->node_state;
 		sview_part_sub->features   = xstrdup(node_ptr->features);
@@ -1311,7 +1314,6 @@ static sview_part_sub_t *_create_sview_part_sub(partition_info_t *part_ptr,
 		return NULL;
 	}
 	sview_part_sub_ptr->part_ptr = part_ptr;
-		
 	sview_part_sub_ptr->node_state = node_ptr->node_state;
 	sview_part_sub_ptr->node_cnt = node_scaling;
 	
@@ -1623,24 +1625,30 @@ extern int get_new_info_part(partition_info_msg_t **part_ptr, int force)
 	int error_code = SLURM_NO_CHANGE_IN_DATA;
 	time_t now = time(NULL);
 	static time_t last;
+	static bool changed = 0;
 		
 	if(!force && ((now - last) < global_sleep_time)) {
 		*part_ptr = part_info_ptr;
+		if(changed) 
+			return SLURM_SUCCESS;
 		return error_code;
 	}
 	last = now;
 	if (part_info_ptr) {
 		error_code = slurm_load_partitions(part_info_ptr->last_update, 
 						   &new_part_ptr, SHOW_ALL);
-		if (error_code == SLURM_SUCCESS)
+		if (error_code == SLURM_SUCCESS) {
 			slurm_free_partition_info_msg(part_info_ptr);
-		else if (slurm_get_errno() == SLURM_NO_CHANGE_IN_DATA) {
+			changed = 1;
+		} else if (slurm_get_errno() == SLURM_NO_CHANGE_IN_DATA) {
 			error_code = SLURM_NO_CHANGE_IN_DATA;
 			new_part_ptr = part_info_ptr;
+				changed = 0;
 		}
 	} else {
 		error_code = slurm_load_partitions((time_t) NULL, 
 						   &new_part_ptr, SHOW_ALL);
+		changed = 1;
 	}
 	
 	part_info_ptr = new_part_ptr;
@@ -1656,59 +1664,66 @@ extern GtkListStore *create_model_part(int type)
 	int i=0;
 	switch(type) {
 	case SORTID_DEFAULT:
-		model = gtk_list_store_new(1, G_TYPE_STRING,
-					   G_TYPE_INT);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "yes",
+				   1, SORTID_DEFAULT,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "no",
+				   1, SORTID_DEFAULT,
 				   -1);	
 
 		break;
 	case SORTID_HIDDEN:
-		model = gtk_list_store_new(1, G_TYPE_STRING);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "yes",
+				   1, SORTID_HIDDEN,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "no",
+				   1, SORTID_HIDDEN,
 				   -1);	
 
 		break;
 	case SORTID_TIMELIMIT:
 	case SORTID_MIN_NODES:
-		break;
 	case SORTID_MAX_NODES:
 		break;
 	case SORTID_ROOT:
-		model = gtk_list_store_new(1, G_TYPE_STRING);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "yes",
+				   1, SORTID_ROOT,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "no",
+				   1, SORTID_ROOT,
 				   -1);	
 		break;
 	case SORTID_SHARE:
-		model = gtk_list_store_new(1, G_TYPE_STRING);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "yes",
+				   1, SORTID_SHARE,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "no",
+				   1, SORTID_SHARE,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "force",
+				   1, SORTID_SHARE,
 				   -1);	
 		break;
 	case SORTID_GROUPS:
@@ -1716,26 +1731,29 @@ extern GtkListStore *create_model_part(int type)
 	case SORTID_NODELIST:
 		break;
 	case SORTID_AVAIL:
-		model = gtk_list_store_new(1, G_TYPE_STRING);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "up",
+				   1, SORTID_AVAIL,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "down",
+				   1, SORTID_AVAIL,
 				   -1);	
 		break;
 	case SORTID_STATE:
-		model = gtk_list_store_new(1, G_TYPE_STRING,
-					   G_TYPE_INT);
+		model = gtk_list_store_new(2, G_TYPE_STRING, G_TYPE_INT);
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "drain",
+				   1, SORTID_STATE,
 				   -1);	
 		gtk_list_store_append(model, &iter);
 		gtk_list_store_set(model, &iter,
 				   0, "resume",
+				   1, SORTID_STATE,
 				   -1);	
 		for(i = 0; i < NODE_STATE_END; i++) {
 			upper = node_state_string(i);
@@ -1746,6 +1764,7 @@ extern GtkListStore *create_model_part(int type)
 			lower = str_tolower(upper);
 			gtk_list_store_set(model, &iter,
 					   0, lower,
+					   1, SORTID_STATE,
 					   -1);
 			xfree(lower);
 		}
