@@ -4,6 +4,7 @@ documents those changes that are of interest to users and admins.
 * Changes in SLURM 1.2.18
 =========================
  -- BLUEGENE - bug fix for smap stating passthroughs are used when they aren't
+ -- fixed bug in sview to be able to edit partitions correctly
 
 * Changes in SLURM 1.2.17
 =========================
